display error on mobile device trying fix

--- a/public/bundle.css
+++ b/public/bundle.css
@@ -4,7 +4,7 @@ div.svelte-q7k7y8{width:100vw;height:100vh}
 .background.svelte-1efvyr{width:100vw;height:100vh;position:absolute;z-index:-1}.main.svelte-1efvyr{width:100%;height:100%;display:flex;align-items:center}.left.svelte-1efvyr{height:100%;width:50%}.form-container.svelte-1efvyr{max-width:60%;height:90%;color:white;z-index:10;display:flex;flex-direction:column;align-items:flex-end;margin-top:2rem;padding:1rem 1rem 1rem 0}h1.svelte-1efvyr{align-self:flex-start;padding:1rem 1rem 1rem 0}.dn.svelte-1efvyr{display:none}.form-input.svelte-1efvyr{color:white;font-family:'Oswald', sans-serif;font-weight:500;font-size:18px;border-radius:5px;line-height:22px;background-color:transparent;border:2px solid rgb(90, 12, 26);transition:all 0.3s;padding:13px;margin-bottom:15px;width:100%;box-sizing:border-box;outline:0}.form-input.svelte-1efvyr:focus{border:2px solid rgba(224, 30, 66, 0.454)}textarea.svelte-1efvyr{height:150px;line-height:150%;resize:vertical}[type="submit"].svelte-1efvyr{font-family:'Oswald', sans-serif;width:100%;background:rgba(224, 30, 66, 0.454);border-radius:5px;border:0;cursor:pointer;color:white;font-size:24px;padding-top:10px;padding-bottom:10px;transition:all 0.3s;margin-top:-4px;font-weight:700}[type="submit"].svelte-1efvyr:hover{transform:scale(1.05)
   }
 .navbar.svelte-1xiqnao{height:4.5rem;width:100vw;background-color:black;top:0;position:fixed;display:flex;align-items:center;z-index:100}.myName.svelte-1xiqnao{height:3.75rem;padding-left:3rem}
-.background.svelte-m2xn8g{height:100vh;width:50vw;position:absolute;z-index:1}.pericardium.svelte-m2xn8g{width:100%;height:105%;display:flex;justify-content:center;will-change:transform}#anatomicalHeart.svelte-m2xn8g{opacity:.4
-}
+.background.svelte-3oxew8{height:100vh;height:calc(var(--vh, 1vh) * 100);width:50vw;position:absolute;z-index:1}.pericardium.svelte-3oxew8{width:100%;height:105%;display:flex;justify-content:center;will-change:transform}#anatomicalHeart.svelte-3oxew8{opacity:.4
+}@media only screen and (max-width: 700px){.background.svelte-3oxew8{width:50vw}}
 
 /*# sourceMappingURL=bundle.css.map */
